@@ -84,6 +84,7 @@ SVN trunk (1.1.2+svn):
    * simplified upkeep: Each controlled village gives 2 GP per turn, and 
      each unit costs 1*(# of Levels) GP per turn, unless loyal.
    * new /help command in mp lobby to get info on available commands
+   * :mute command to silent observers
 
 Version 1.1.2:
  * campaigns
